--- a/blog/templates/blog/chatbot.html
+++ b/blog/templates/blog/chatbot.html
@@ -2,9 +2,61 @@
 <!DOCTYPE html>
 <html lang="en" >
   <head>
-    <script type="text/javascript" src='{% static 'js/index.js' %}'></script>
+    <meta charset="UTF-8">
+    <title>커리어클루 챗봇 서비스 v0.1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="stylesheet" href="{% static 'css/chatbot.css' %}">
+    <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
   </head>
   <body>
- </body>
+    <html ng-app="chatApp">
+      <body ng-controller="ChatCtrl">
+        <div class="chat" id="scrollDiv">
+          <header id="chat-header">
+            <h2>진로상담 FAQ 챗봇</h2>
+            <a ng-click="truncate()">Truncate</a>
+          </header>
+          <main scroll-glue class="custom-scroll">
+            {% for post in posts %}
+            <section class="message">
+              <figure>
+                <img src="http://www.gravatar.com/avatar/%7Bmd5email%7D?s=50&d=mm" alt="mm" />
+              </figure>
+              <div class="speech">
+                <header>
+                  <strong>{{post.author}}</strong>
+                </header>
+                <p>{{post.text}}</p>
+              </div>
+            </section>
+            {% endfor %} 
+          </main>
+          <footer>
+            <form action="", method="post" id='chatInput'>
+              {% csrf_token %}
+              <input type="text" name="q" id="test" class='test'>
+              <button type="submit">Send</button>
+            </form>
+          </footer>
+        </div>
+      </body>
+    </html>
+    <script>
+      $('#test').focus();
+    </script>
+    <!--script type="text/javascript" src='{% static 'js/index.js' %}'></script-->
+    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
+    <script src='https://cdn.firebase.com/js/client/1.0.21/firebase.js'></script>
+    <script src='https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.min.js'></script>
+    <script src='https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/v2.0.2/src/scrollglue.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-sanitize.js'></script>
+    <script src='https://raw.githubusercontent.com/xelita/angular-cordova-vibration/master/src/cordovaVibrationModule.min.js'></script>
+  </body>
 </html>
 
