--- a/blog/templates/blog/chatbot.html
+++ b/blog/templates/blog/chatbot.html
@@ -18,7 +18,7 @@
         <div class="chat" id="scrollDiv">
           <header id="chat-header">
             <h2>진로상담 FAQ 챗봇</h2>
-            <a ng-click="truncate()">Truncate</a>
+            <!-- a ng-click="truncate()">Truncate</a-->
           </header>
           <main scroll-glue class="custom-scroll">
             {% for post in posts %}
