--- a/blog/static/css/chatbot.css
+++ b/blog/static/css/chatbot.css
@@ -95,7 +95,7 @@ body {
 }
 .chat main .message {
   position: relative;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
   -webkit-animation: fade-in 200ms linear;
           animation: fade-in 200ms linear;
   overflow: hidden;
@@ -156,12 +156,10 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 50px;
   background: rgba(40, 44, 42, 0.05);
 }
 .chat footer form {
   padding: 8px;
-  height: 34px;
   width: 100%;
 }
 .chat footer form [type='text'] {
@@ -195,6 +193,34 @@ body {
   font-size: 16px;
   font-weight: 500;
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: red;
+    padding: 4px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    cursor: pointer;
+    width: 100%;
+}
+
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #a2a2a2;
+}
+
+.button1:hover {
+    background-color: #cacaca;
+    color: white;
+}
+
 
 @-webkit-keyframes fade-in {
   from {
