--- a/blog/templates/blog/chatbot.html
+++ b/blog/templates/blog/chatbot.html
@@ -13,14 +13,14 @@
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
   </head>
   <body>
-    <html ng-app="chatApp">
-      <body ng-controller="ChatCtrl">
-        <div class="chat" id="scrollDiv">
+    <html>
+      <body>
+        <div class="chat">
           <header id="chat-header">
             <h2>진로상담 FAQ 챗봇</h2>
-            <!-- a ng-click="truncate()">Truncate</a-->
+            <!-- a>Truncate</a-->
           </header>
-          <main scroll-glue class="custom-scroll">
+          <main class="custom-scroll" id="scrollDiv">
             {% for post in posts %}
             <section class="message">
               <figure>
@@ -31,6 +31,12 @@
                   <strong>{{post.author}}</strong>
                 </header>
                 <p>{{post.text}}</p>
+                <form action="", method="post">
+                {% csrf_token %}
+                {% autoescape off %}
+                <p>{{post.button}}</p>
+                {% endautoescape %}
+                </form>
               </div>
             </section>
             {% endfor %} 
@@ -39,7 +45,7 @@
             <form action="", method="post" id='chatInput'>
               {% csrf_token %}
               <input type="text" name="q" id="test" class='test'>
-              <button type="submit">Send</button>
+              <button type="submit" value="NULL">Send</button>
             </form>
           </footer>
         </div>
@@ -47,16 +53,9 @@
     </html>
     <script>
       $('#test').focus();
+      $("#scrollDiv").scrollTop($("#scrollDiv")[0].scrollHeight);
     </script>
     <!--script type="text/javascript" src='{% static 'js/index.js' %}'></script-->
-    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
-    <script src='https://cdn.firebase.com/js/client/1.0.21/firebase.js'></script>
-    <script src='https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.min.js'></script>
-    <script src='https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/v2.0.2/src/scrollglue.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-sanitize.js'></script>
-    <script src='https://raw.githubusercontent.com/xelita/angular-cordova-vibration/master/src/cordovaVibrationModule.min.js'></script>
   </body>
 </html>
 
